--- a/css/estiloadm.css
+++ b/css/estiloadm.css
@@ -1,5 +1,5 @@
 html{
-  background-color: hwb(295 0% 87%); /* Define a cor de fundo do menu */
+  background-color: hwb(341 4% 85%); /* Define a cor de fundo do menu */
 }
 
 .menu {
@@ -95,7 +95,7 @@ h2{
 }
 h1{
 
-  color: #292929;
+  color: #e0dceb;
 }
 p{
 
